thêm api thống kê
