# src/controllers/login.controller.js
@@ -14,6 +14,7 @@ const postLogin = async (req, res, next) => {
         // check account is existing?
         const account = await AccountModel.findOne({ email }).lean()
         if (!account) return res.status(401).json({ message: "Email is not existing!" })
+        if (account.isActive == false) return res.status(401).json({ message: "Tài khoản đã bị khoá." })
 
         // check password
         const isMatch = await bcrypt.compare(password ? password : "", account.password)
